# asibot-hmi

./: .gitignore  .travis.yml  ASIBOT_HMIConfig.cmake.in  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
cmake/: ASIBOT_HMIDescribe.cmake  ASIBOT_HMIDoc.cmake  ASIBOT_HMIOptions.cmake  ASIBOT_HMIPackage.cmake  ASIBOT_HMISystem.cmake  ASIBOT_HMIVersion.cmake
cmake/template/: ASIBOT_HMIConfig.cmake.in
doc/: Doxyfile  groups.dox  main.dox
libraries/: CMakeLists.txt
libraries/ExampleLibrary/: CMakeLists.txt
programs/: CMakeLists.txt
programs/exampleProgram/: CMakeLists.txt  main.cpp
programs/webInterface/: CMakeLists.txt  WebInterface.cpp  WebInterface.hpp  WebResponder.cpp  WebResponder.hpp  main.cpp
scripts/admin/: update-dox.sh
scripts/gnome/: asibot-hmi.desktop
scripts/package/: make_package.bat  make_package.sh
share/: CMakeLists.txt
share/webInterface/user/: AsibotPy.py
